--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Condition" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" translatesAutoresizingMaskIntoConstraints="NO" id="tH5-Tj-U82">
-                                <rect key="frame" x="20" y="160" width="240" height="33"/>
+                                <rect key="frame" x="20" y="160" width="240" height="32"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -88,6 +88,14 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yx7-0n-e5G" customClass="Compass" customModule="WeatherApp" customModuleProvider="target">
+                                <rect key="frame" x="240" y="419" width="120" height="120"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Yx7-0n-e5G" secondAttribute="height" multiplier="1:1" id="Dkw-VH-ndZ"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" red="0.2795184850692749" green="0.68742424249649048" blue="0.91971129179000854" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -99,6 +107,8 @@
                             <constraint firstAttribute="leadingMargin" secondItem="tH5-Tj-U82" secondAttribute="leading" id="8XM-8a-9Aq"/>
                             <constraint firstItem="xXq-P4-JuA" firstAttribute="top" secondItem="Jri-Z3-dll" secondAttribute="bottom" constant="10" id="917-tk-lTs"/>
                             <constraint firstItem="tH5-Tj-U82" firstAttribute="centerY" secondItem="Jri-Z3-dll" secondAttribute="centerY" constant="21.5" id="BG4-du-YIe"/>
+                            <constraint firstItem="Yx7-0n-e5G" firstAttribute="width" secondItem="C1q-Tm-4NS" secondAttribute="width" multiplier="0.5" id="DG2-s3-Jdg"/>
+                            <constraint firstItem="Yx7-0n-e5G" firstAttribute="top" secondItem="PUL-pX-B8r" secondAttribute="bottom" constant="16" id="GBX-DY-BJt"/>
                             <constraint firstItem="C1q-Tm-4NS" firstAttribute="width" secondItem="svH-Pt-448" secondAttribute="width" multiplier="0.4" id="H5L-Fc-bb0"/>
                             <constraint firstItem="Jri-Z3-dll" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="40" id="Lh4-Li-XQU"/>
                             <constraint firstItem="PUL-pX-B8r" firstAttribute="top" secondItem="jOF-HT-xV0" secondAttribute="bottom" constant="8" id="TDP-dp-Eha"/>
@@ -110,6 +120,7 @@
                             <constraint firstItem="PUL-pX-B8r" firstAttribute="centerX" secondItem="C1q-Tm-4NS" secondAttribute="centerX" id="od6-8T-1uc"/>
                             <constraint firstItem="xXq-P4-JuA" firstAttribute="width" secondItem="Jri-Z3-dll" secondAttribute="width" id="ozn-Cj-Mfc"/>
                             <constraint firstItem="C1q-Tm-4NS" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="pL0-Nh-tOA"/>
+                            <constraint firstItem="Yx7-0n-e5G" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="pQP-n4-eVf"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
