--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Condition" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" translatesAutoresizingMaskIntoConstraints="NO" id="tH5-Tj-U82">
-                                <rect key="frame" x="20" y="160" width="240" height="32"/>
+                                <rect key="frame" x="20" y="160" width="240" height="33"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -70,9 +70,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="heightClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="20" y="183" width="240" height="32.5"/>
-                                </variation>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DIR" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jOF-HT-xV0">
                                 <rect key="frame" x="180" y="330" width="240" height="33"/>
@@ -89,7 +86,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yx7-0n-e5G" customClass="Compass" customModule="WeatherApp" customModuleProvider="target">
-                                <rect key="frame" x="240" y="419" width="120" height="120"/>
+                                <rect key="frame" x="216" y="419" width="168" height="168"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -101,27 +98,40 @@
                         <color key="backgroundColor" red="0.2795184850692749" green="0.68742424249649048" blue="0.91971129179000854" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="jOF-HT-xV0" firstAttribute="width" secondItem="C1q-Tm-4NS" secondAttribute="width" id="2Xq-ny-CBU"/>
+                            <constraint firstItem="C1q-Tm-4NS" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="1" id="543-CT-0Jf"/>
                             <constraint firstItem="Jri-Z3-dll" firstAttribute="width" secondItem="svH-Pt-448" secondAttribute="width" multiplier="0.3" id="5Eq-T7-9aV"/>
                             <constraint firstItem="jOF-HT-xV0" firstAttribute="top" secondItem="C1q-Tm-4NS" secondAttribute="bottom" constant="8" id="6yN-cC-K6c"/>
                             <constraint firstItem="jOF-HT-xV0" firstAttribute="centerX" secondItem="C1q-Tm-4NS" secondAttribute="centerX" id="85K-A8-XKu"/>
                             <constraint firstAttribute="leadingMargin" secondItem="tH5-Tj-U82" secondAttribute="leading" id="8XM-8a-9Aq"/>
                             <constraint firstItem="xXq-P4-JuA" firstAttribute="top" secondItem="Jri-Z3-dll" secondAttribute="bottom" constant="10" id="917-tk-lTs"/>
                             <constraint firstItem="tH5-Tj-U82" firstAttribute="centerY" secondItem="Jri-Z3-dll" secondAttribute="centerY" constant="21.5" id="BG4-du-YIe"/>
-                            <constraint firstItem="Yx7-0n-e5G" firstAttribute="width" secondItem="C1q-Tm-4NS" secondAttribute="width" multiplier="0.5" id="DG2-s3-Jdg"/>
+                            <constraint firstItem="Yx7-0n-e5G" firstAttribute="width" secondItem="C1q-Tm-4NS" secondAttribute="width" multiplier="0.7" id="DG2-s3-Jdg"/>
                             <constraint firstItem="Yx7-0n-e5G" firstAttribute="top" secondItem="PUL-pX-B8r" secondAttribute="bottom" constant="16" id="GBX-DY-BJt"/>
                             <constraint firstItem="C1q-Tm-4NS" firstAttribute="width" secondItem="svH-Pt-448" secondAttribute="width" multiplier="0.4" id="H5L-Fc-bb0"/>
                             <constraint firstItem="Jri-Z3-dll" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="40" id="Lh4-Li-XQU"/>
                             <constraint firstItem="PUL-pX-B8r" firstAttribute="top" secondItem="jOF-HT-xV0" secondAttribute="bottom" constant="8" id="TDP-dp-Eha"/>
                             <constraint firstItem="tH5-Tj-U82" firstAttribute="width" secondItem="svH-Pt-448" secondAttribute="width" multiplier="0.4" id="WAd-Vj-3ws"/>
                             <constraint firstItem="PUL-pX-B8r" firstAttribute="width" secondItem="C1q-Tm-4NS" secondAttribute="width" id="ZPc-3q-19R"/>
+                            <constraint firstItem="C1q-Tm-4NS" firstAttribute="centerY" secondItem="svH-Pt-448" secondAttribute="centerY" id="ibq-x0-Udk"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xXq-P4-JuA" secondAttribute="trailing" constant="8" id="l7g-hL-BK4"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Jri-Z3-dll" secondAttribute="trailing" constant="8" id="mez-c3-qCV"/>
-                            <constraint firstItem="C1q-Tm-4NS" firstAttribute="centerY" secondItem="svH-Pt-448" secondAttribute="centerY" id="n1I-eS-oYV"/>
                             <constraint firstItem="PUL-pX-B8r" firstAttribute="centerX" secondItem="C1q-Tm-4NS" secondAttribute="centerX" id="od6-8T-1uc"/>
                             <constraint firstItem="xXq-P4-JuA" firstAttribute="width" secondItem="Jri-Z3-dll" secondAttribute="width" id="ozn-Cj-Mfc"/>
                             <constraint firstItem="C1q-Tm-4NS" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="pL0-Nh-tOA"/>
                             <constraint firstItem="Yx7-0n-e5G" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="pQP-n4-eVf"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="543-CT-0Jf"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <include reference="543-CT-0Jf"/>
+                                <exclude reference="ibq-x0-Udk"/>
+                                <include reference="pL0-Nh-tOA"/>
+                            </mask>
+                        </variation>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Weather" id="mOI-FS-AaM"/>
@@ -277,7 +287,7 @@
         <image name="sort" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="6S0-TO-JiA"/>
+        <segue reference="Tll-UG-LXB"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
 </document>
